# kyogo_tyosa

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  build_master_list.py  main.py  pyproject.toml  scrape_github.py  scrape_jstartup.py  scrape_tavily.py  scrape_tavily_maps.py  sources.yaml  write_research_to_excel.py
.github/workflows/: ci.yml
scripts/: common.py  scrape_github.py  scrape_jstartup.py  scrape_tavily.py  scrape_tavily_maps.py
