[project]
name = "kyogo-tyosa"
version = "0.1.0"
description = "Scraping scripts to investigate the competitors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # trailing comma - conflicts with formatter
    "D203",    # one-blank-line-before-class - conflicts with D211
    "D212",    # multi-line-summary-first-line - conflicts with D213
    "ISC001",  # implicit string concatenation - conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # allow `assert` in tests
    "ANN",     # relax annotations in tests
    "D",       # relax docstrings in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
